... I hate build.yml